--- a/4. Digital Clock Interchangeable Background/style.css
+++ b/4. Digital Clock Interchangeable Background/style.css
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: "Poppins-Bold";
-  src: url(assets/font/Poppins/Poppins-Bold.ttf) format("truetype");
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 *,
 ::before,
@@ -12,16 +9,21 @@
 }
 
 body {
-  font-family: "Poppins-Bold", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Poppins", sans-serif;
+  height: 100vh;
 }
 
 .container {
-  width: 400px;
-  height: 400px;
+  margin: 100px auto;
+  width: 500px;
+  height: 500px;
   border: 1px solid black;
-  margin: 10% auto;
   padding: 100px;
   border-radius: 20px;
+  top: 45%;
+  left: 50%;
+
+  text-shadow: 2px 1px 1px #333;
 }
 
 .flex-col {
@@ -31,6 +33,16 @@ body {
   gap: 30px;
 }
 
-#msg {
+#time {
+  font-size: 70px;
+}
+
+#focus-input {
+  height: 30px;
+  background: transparent;
+  border: none;
+  outline: none;
   text-align: center;
+  border-bottom: 2px solid #ddd;
+  color: white;
 }
