--- a/5. Animated Nav/style.css
+++ b/5. Animated Nav/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 *,
 ::before,
 ::after {
@@ -5,7 +6,6 @@
   margin: 0;
   box-sizing: border-box;
 }
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 body {
   font-family: "Roboto", sans-serif;
@@ -26,7 +26,7 @@ body {
   flex-direction: column;
 }
 
-.main-container {
+.wrapper {
   width: 90%;
   height: 85vh;
   margin: 30px auto;
@@ -50,10 +50,6 @@ i:hover {
 ul {
   list-style: none;
   display: none;
-}
-
-.nav-container .logo {
-  /* transition delay */
 }
 
 .main-nav-list a {
