--- a/5. Animated Nav/style.css
+++ b/5. Animated Nav/style.css
@@ -46,6 +46,9 @@ i:hover {
   cursor: pointer;
   z-index: 3;
 }
+i {
+  z-index: 1;
+}
 
 ul {
   list-style: none;
@@ -102,6 +105,7 @@ ul {
   text-shadow: 0 3px 3px rgba(0, 0, 0, 0, 0.3);
 }
 
+.main-nav-list.active::after,
 .main-nav-list.active::after {
   width: 25vw;
 }
